@@ -1322,7 +1322,7 @@ define_mpn(addaddmul_1msb0)
 define_mpn(and_n)
 define_mpn(andn_n)
 define_mpn(bdiv_q_1)
-define_mpn(bdiv_q_1_pi1)
+define_mpn(pi1_bdiv_q_1)
 define_mpn(bdiv_dbm1c)
 define_mpn(bdivmod)
 define_mpn(cmp)
